src/test/ui/associated-const/associated-const-dead-code.stderr
error: associated const is never used: `BAR`
  --> $DIR/associated-const-dead-code.rs:6:5
   |
LL |     const BAR: u32 = 1;
   |     ^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/associated-const-dead-code.rs:1:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

